# contour-topography

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: benchmark_color_palette.py  benchmark_layer_ranges.py  main.py  map.py
src/data_models/: canevas.py  canvas.py  color_stop.py  map.py  road_weight.py
src/data_models/features/: __init__.py  base_feature.py  line_feature.py  road_feature.py  water_feature.py
src/defines/: canvas_sizes.py  color_palettes.py  defaults.py  layer_ranges.py  road_detail.py  road_weights.py  water_bodies.py
src/scripts/: benchmark_color_palette.py  benchmark_layer_ranges.py  cut.py  visu.py
src/utils/: MachineConfiguration.py  colormapping.py  colors.py  files.py  geo.py  inkscape.py  parser.py  roads_weights.py  svg.py
