[build-system]
requires = ["setuptools>=42", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "AusMap"
version = "0.1.0"
authors = [
    { name = "Eure-L", email = "eurel.vj@gmail.com" }
]
description = "Logiciel facilitant le vote dématerialisé."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["python"]
license = { text = "MIT" }
readme = "README.md"

requires-python = "~=3.12"

dependencies = [
    "GDAL==3.11.3",
    "pillow==11.3.0",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "gdal==3.11.3",
    "plotly==6.3.0",
    "svgutils==0.3.4",
    "shapely==2.1.2",
]


[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst"]
"your_package_name" = ["data/*.dat"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[project.scripts]
draw_contours = "main:main"

[tool.black]
line-length = 88

[tool.setuptools]
